logistic model using tf keras

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8323, 20)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import time\n",
     "import pandas as pd\n",
@@ -22,6 +33,8 @@
     "from sklearn.feature_selection import mutual_info_classif\n",
     "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "wandb.login()\n",
     "\n",
     "df_train = pd.read_csv('data/train.csv').drop(['id'], axis=1)\n",
     "df_train['source'] = 'simulation'\n",
@@ -49,9 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prep Data for XGBoost\n",
+    "# Prep Data\n",
     "\n",
-    "## Helper Functions"
+    "## Preprocessing Functions"
    ]
   },
   {
@@ -77,7 +90,15 @@
     "    X_cat = oe.fit_transform(X_cat)\n",
     "    X_cat = pd.DataFrame(X_cat, columns=CAT_FEATS)\n",
     "    X_num = pd.DataFrame(X_num, columns=NUM_FEATS)\n",
-    "    return X_cat, X_num"
+    "    return X_cat, X_num\n",
+    "    \n",
+    "# logarithmic transformations\n",
+    "def get_logs(data, skewed_features):\n",
+    "    X_log = X[skewed_features]\n",
+    "    other_feats = data.columns.difference(skewed_features).tolist()\n",
+    "    X_other = X[other_feats]\n",
+    "    X_log = log_transformation(X_log, skewed_features)\n",
+    "    return pd.concat([X_log, X_other], axis=1)"
    ]
   },
   {
@@ -89,9 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8323, 18)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create features and target arrays\n",
     "X, y = df_train.drop(TARGET, axis=1), df_train[[TARGET]]\n",
@@ -114,25 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8323, 20)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# n symptoms\n",
     "# recode edema \"S\" and \"Y\" to both indicate edema for the purpose of this count variable\n",
     "X['Edema'] = np.where(X['Edema'] == 2, 1, X['Edema'])\n",
+    "# Number of diseases/symptoms related to liver disease\n",
     "X['N_Symptoms'] = X.Edema + X.Spiders + X.Ascites + X.Hepatomegaly\n",
-    "\n",
-    "# logarithmic transformations\n",
-    "def get_logs(data, skewed_features):\n",
-    "    X_log = X[skewed_features]\n",
-    "    other_feats = data.columns.difference(skewed_features).tolist()\n",
-    "    X_other = X[other_feats]\n",
-    "    X_log = log_transformation(X_log, skewed_features)\n",
-    "    return pd.concat([X_log, X_other], axis=1)\n",
-    "\n",
+    "# log transformations\n",
     "X = get_logs(X, SKEWED_FEATS)\n",
-    "\n",
     "# Age at Diagnosis\n",
     "X['Dgns_Age'] = X['Age'] - X['N_Days']"
    ]
@@ -146,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6658, 20)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# do train/test split on the data\n",
     "X_train, X_dev, y_train, y_dev = train_test_split(X, y, test_size=.2, random_state=1)"
@@ -158,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fit Model\n",
+    "# Fit XGBoost Model\n",
     "\n",
     "## Define wandb sweep parameters"
    ]
@@ -169,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sweep_config = {\n",
+    "xgb_sweep_config = {\n",
     "    \"method\": \"random\", # sweep method\n",
     "    \"metric\": {\n",
     "        \"name\": \"accuracy\",\n",
@@ -180,7 +225,7 @@
     "            \"value\": 'gbtree'\n",
     "        },\n",
     "        \"max_depth\": { # depth of individual trees\n",
-    "            \"values\": [5, 6, 7]\n",
+    "            \"values\": [6, 7]\n",
     "        },\n",
     "        \"learning_rate\": {\n",
     "            'distribution': 'uniform',\n",
@@ -195,7 +240,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "sweep_id = wandb.sweep(sweep_config, project='cirrhosis-xgb-sweeps')"
+    "xgb_sweep_id = wandb.sweep(xgb_sweep_config, project='cirrhosis-xgb-sweeps')"
    ]
   },
   {
@@ -217,24 +262,23 @@
     "    wandb.init(config=config_defaults) # set defaults. They'll be over-ridden later.\n",
     "    config = wandb.config\n",
     "\n",
-    "    model = xgb.XGBClassifier(\n",
+    "    xgb_model = xgb.XGBClassifier(\n",
     "        n_estimators=10_000,\n",
-    "        early_stopping_rounds=2,\n",
+    "        early_stopping_rounds=1,\n",
     "        learning_rate=config.learning_rate,\n",
     "        booster=config.booster,\n",
     "        max_depth=config.max_depth,\n",
     "        subsample=config.subsample\n",
     "    )\n",
     "    \n",
-    "    model.fit(X_train, y_train, eval_set=[(X_dev, y_dev)])\n",
+    "    xgb_model.fit(X_train, y_train, eval_set=[(X_dev, y_dev)])\n",
     "\n",
     "    # get predictions on dev set\n",
-    "    y_pred = model.predict(X_dev)\n",
+    "    y_pred = xgb_model.predict(X_dev)\n",
     "    predictions = [round(value) for value in y_pred]\n",
     "\n",
     "    # evaluate predictions\n",
     "    accuracy = accuracy_score(y_dev, predictions)\n",
-    "    print(f\"Accuracy: {accuracy:.0%}\")\n",
     "    wandb.log({\"accuracy\": accuracy})\n",
     "\n",
     "    #model.save_model(f'checkpoints/{config.booster}\"-\"{config.max_depth}\"-\"{config.learning_rate}\"-\"{config.subsample}\"-\"{time.time()}.json') \n",
@@ -247,19 +291,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wandb.login()\n",
-    "\n",
     "# specify the sweep, the training function, and the number of sweeps\n",
-    "wandb.agent(sweep_id, train, count=200)"
+    "wandb.agent(xgb_sweep_id, train, count=200)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# to-do\n",
+    "### to-do\n",
     "\n",
-    "- [] switch wandb metric from accuracy to val loss. Seems like the config's metric and the one logged using wandb.log() need to be the same.\n"
+    "- [] switch wandb metric from accuracy to val loss. Seems like the config's metric and the one logged using wandb.log() need to be the same.\n",
+    "\n",
+    "# Deep Neural Network Model\n",
+    "\n",
+    "## Prep Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras import layers\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "# one-hot encode the y vector\n",
+    "y_train_oh = pd.get_dummies(y_train)\n",
+    "y_dev_oh = pd.get_dummies(y_dev)\n",
+    "\n",
+    "# model.fit() requires tf.float32 data types. It's easiest to make the conversion before the data is a tf.dataset\n",
+    "y_train_oh = np.float32(y_train_oh)\n",
+    "y_dev_oh = np.float32(y_dev_oh)\n",
+    "\n",
+    "# get input shape\n",
+    "n_features = X_train.shape[1]\n",
+    "\n",
+    "# convert to tf.dataset\n",
+    "train = tf.data.Dataset.from_tensor_slices((X_train, y_train_oh))\n",
+    "dev = tf.data.Dataset.from_tensor_slices((X_dev, y_dev_oh))\n",
+    "\n",
+    "# specify the batch size\n",
+    "train = train.batch(1)\n",
+    "dev = dev.batch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model():\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(layers.InputLayer(input_shape=n_features))\n",
+    "    model.add(layers.Dense(4, activation='relu'))\n",
+    "    model.add(layers.Dense(\n",
+    "        units=3,\n",
+    "        activation='softmax'))\n",
+    "    return model\n",
+    "\n",
+    "model = build_model()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer=tf.keras.optimizers.SGD(.001),\n",
+    "    loss=tf.keras.losses.categorical_crossentropy,\n",
+    "    metrics=['accuracy'])\n",
+    "\n",
+    "class WandbMetricsLogger(tf.keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        wandb.log(logs)\n",
+    "    \n",
+    "# set callbacks\n",
+    "callbacks = [\n",
+    "    WandbMetricsLogger()\n",
+    "    ]\n",
+    "\n",
+    "# train the model\n",
+    "model.fit(\n",
+    "    train,\n",
+    "    epochs=1,\n",
+    "    validation_data=dev)\n",
+    "    #callbacks=callbacks) # uncomment for wandb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decided not to do hyperparameter tuning on this model because it isn't funtioning very well. There are a few reasons why this might be:\n",
+    "\n",
+    "1. Not enough data. This could be getting exascerbated by my choice to do a training/validation split rather k-fold cross validation.\n",
+    "2. The features, as they stand, aren't appropriate for logistic regression. the Sci-kit Learn logistic regression does L1/L2 regularization by default, probably because often when we work with tabular data the features are messy.\n",
+    "3. My feature engineering didn't account for extreme values well enough. \n",
+    "4. There are highly correlated features (like N_Days and Dgns_Age and Age) that ruin the optimization."
    ]
   }
  ],
