--- a/project.ipynb
+++ b/project.ipynb
@@ -323,7 +323,7 @@
     "\n",
     "- [] switch wandb metric from accuracy to val loss. Seems like the config's metric and the one logged using wandb.log() need to be the same.\n",
     "\n",
-    "# Deep Neural Network Model\n",
+    "# Deep Neural Network\n",
     "\n",
     "## Prep Data"
    ]
